Chapter08/example/frontend/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend
    labels:
        app: frontend
    namespace: example
spec:
    replicas: 4
    strategy:
      type: RollingUpdate
      rollingUpdate:
        maxUnavailable: 25%
        maxSurge: 1
    selector:
        matchLabels:
            app: frontend
    template:
        metadata:
            labels:
                app: frontend
        spec:
            containers:
                - name: frontend-service
                  image: likeclem30/thoughts_frontend:latest
                  imagePullPolicy: Never
                  ports:
                     - containerPort: 8000
                  livenessProbe:
                      exec:
                        command:
                        - curl
                        - http://localhost:8000/
                      initialDelaySeconds: 5
                      periodSeconds: 30
                  readinessProbe:
                      exec:
                        command:
                        - curl
                        - http://localhost:8000/
                      initialDelaySeconds: 5
                      periodSeconds: 10
