Chapter08/example/frontend/ingress.yaml
---
#apiVersion: extensions/v1beta1
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: frontend-ingress
    namespace: example
spec:
    rules:
        - host: frontend.example.local
          http:
            paths:
              - backend:
                  serviceName: frontend-service
                  servicePort: 80
                path: /
